--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,12 @@ body {
     float: left;
 }
 
+.column-30-margin {
+    width: 30%;
+    float: left;
+    margin-left: 4%;
+}
+
 
 /* ----------------------------- */
 
@@ -96,4 +102,18 @@ body {
     background-color: rgb(61, 106, 56);
     border-radius: 25px;
     padding: 2%;
+}
+
+@media only screen and (max-width: 700px) {
+    /* REGLAS: */
+    .column-3 {
+        width: 100%;
+    }
+    .column-30 {
+        width: 100%;
+    }
+    .column-30-margin {
+        width: 100%;
+        margin-left: 0%;
+    }
 }
